...
    val sortOrder: Int
)

enum class Currency(val symbol: String) {
    PLN("zł"),
    USD("$"),
    EUR("€"),
    UAH("₴"),
    GBP("£"),
    CHF("Fr"),
    CZK("Kč"),
    SEK("kr"),
    NOK("kr"),
...
